log

Thu 14 Mar 2024 08:36:02 PM UTC: 
 exercises.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 20/70
943f885
Thu 14 Mar 2024 08:36:47 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
d1e4b2b
Thu 14 Mar 2024 08:44:45 PM UTC: 
 exercises.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:60:20: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   60 |           nuevaArr = arr[i];
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
7ce7ce8
Thu 14 Mar 2024 08:45:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
7d12ca0
Thu 14 Mar 2024 08:46:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
8db53ed
Thu 14 Mar 2024 08:47:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
0189060
Thu 14 Mar 2024 08:48:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
b1060d9
Thu 14 Mar 2024 08:57:57 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
0625b94
Thu 14 Mar 2024 09:02:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
25fc2e6
Thu 14 Mar 2024 09:03:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
ef336db
Thu 14 Mar 2024 09:04:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
ee38c92
Thu 14 Mar 2024 09:12:59 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 30/70
e8c829c
Thu 14 Mar 2024 09:14:11 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|4
total_score: 30/70
6da663f
Thu 14 Mar 2024 09:18:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:65:10: error: ‘nuevaArr’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   65 |   return nuevaArr;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e221a49
Thu 14 Mar 2024 09:19:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:47:7: error: array size missing in ‘nuevaArr’
   47 |   int nuevaArr[];
      |       ^~~~~~~~
exercises.c:54:20: error: assignment to expression with array type
   54 |           nuevaArr = (int *)malloc(sizeof(int));
      |                    ^
exercises.c:59:20: error: assignment to expression with array type
   59 |           nuevaArr = (int *)realloc(nuevaArr, (*newSize) * sizeof(int));
      |                    ^
exercises.c:65:10: error: function returns address of local variable [-Werror=return-local-addr]
   65 |   return nuevaArr;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
40a6757
Thu 14 Mar 2024 10:58:43 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 30/70
5e3ea1a
Thu 14 Mar 2024 11:00:30 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|4
total_score: 30/70
aee2a57
